add payment service
