# common/docs/payment_api.swagger.json
@@ -51,7 +51,13 @@
             "type": "string"
           },
           {
-            "name": "userId",
+            "name": "status",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "customerName",
             "in": "query",
             "required": false,
             "type": "string"
@@ -148,6 +154,12 @@
           "type": "string"
         },
         "userId": {
+          "type": "string"
+        },
+        "customerName": {
+          "type": "string"
+        },
+        "customerEmail": {
           "type": "string"
         },
         "amount": {
